Only Call EnableChildWindowDpiMessage When Window Has A Frame

Panels do not use the system frame. The "frame" is a shadow drawn by
DWM. When EnableChildWindowDpiMessage is used on these windows, the
shadow can occasiaonlly disappear when the window is moved.

BUG=631963

Review-Url: https://codereview.chromium.org/2246643002
Cr-Commit-Position: refs/heads/master@{#411819}

Former-commit-id: bfbe823c6a53aa85966ca3b7c8c5a4f08be609c9